adding on push for now

--- a/.github/workflows/users-lib.yaml
+++ b/.github/workflows/users-lib.yaml
@@ -1,6 +1,7 @@
 name: UsersLib
 
 on:
+  push:
   # Manual trigger (equivalent to "When clicking 'Execute workflow'")
   workflow_dispatch:
     inputs:
