--- a/.github/workflows/firefighter.yml
+++ b/.github/workflows/firefighter.yml
@@ -17,8 +17,16 @@ jobs:
       OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
       SLACK_USER_TOKEN: ${{ secrets.SLACK_USER_TOKEN }}
-      SLACK_CHANNEL_ID: ${{ secrets.SLACK_CHANNEL_ID }}
+      SLACK_CHANNEL_ID: C06NH7VRZ88
       REDIS_URL: redis://localhost:6379/0
+      SEARCH_QUERY: "@platform-firefighter"
+      SEARCH_LIMIT: "50"
+      LOOKBACK_DAYS: "7"
+      OPENAI_MODEL: "gpt-4o-mini"
+      USER_CACHE_TTL: "7200"
+      THREAD_CACHE_TTL: "3600"
+      MAX_THREADS: "10"
+      DRY_RUN: "false"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
