Update OpenAI model version in firefighter workflow

--- a/.github/workflows/firefighter.yml
+++ b/.github/workflows/firefighter.yml
@@ -22,7 +22,7 @@ jobs:
       SEARCH_QUERY: "@platform-firefighter"
       SEARCH_LIMIT: "50"
       LOOKBACK_DAYS: "7"
-      OPENAI_MODEL: "gpt-4o-mini"
+      OPENAI_MODEL: "gpt-5.2-2025-12-11"
       USER_CACHE_TTL: "7200"
       THREAD_CACHE_TTL: "3600"
       MAX_THREADS: "10"
