--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
   "python-dotenv>=1.0,<2",
   "slack_sdk>=3.33,<4",
   "redis>=5.0,<6",
-  "typer>=0.12,<0.13",
+  "typer>=0.12",
   "httpx>=0.27,<0.28",
 ]
 
