Refactor Summarizer initialization to support pluggable LLMs, update configuration settings for API keys and models, and enhance README documentation for environment setup.

--- a/.github/workflows/firefighter.yml
+++ b/.github/workflows/firefighter.yml
@@ -14,15 +14,16 @@ jobs:
         ports:
           - 6379:6379
     env:
-      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+      LLM_API_KEY: ${{ secrets.LLM_API_KEY || secrets.OPENAI_API_KEY }}
+      LLM_PROVIDER: openai
       SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
       SLACK_USER_TOKEN: ${{ secrets.SLACK_USER_TOKEN }}
-      SLACK_CHANNEL_ID: C02UTTBR4FQ
+      SLACK_CHANNEL_ID: C0A4B9HF4MU
       REDIS_URL: redis://localhost:6379/0
       SEARCH_QUERY: "@platform-firefighter"
       SEARCH_LIMIT: "50"
-      LOOKBACK_DAYS: "1"
-      OPENAI_MODEL: "gpt-5.2-2025-12-11"
+      LOOKBACK_DAYS: "2"
+      LLM_MODEL: "gpt-5.2-2025-12-11"
       USER_CACHE_TTL: "7200"
       THREAD_CACHE_TTL: "3600"
       MAX_THREADS: "10"
